<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/Question1" />

            <EditText
                android:id="@+id/Answer_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Answer1Hint"
                android:inputType="text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/Question2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Answer2Hint"
                android:textSize="16sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/Question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/Answer2_1"
                    style="@style/Chooses"
                    android:checked="true"
                    android:text="@string/Answer2_1" />

                <RadioButton
                    android:id="@+id/Answer2_2"
                    style="@style/Chooses"
                    android:checked="true"
                    android:text="@string/Answer2_2" />

                <RadioButton
                    android:id="@+id/Answer2_3"
                    style="@style/Chooses"
                    android:checked="true"
                    android:text="@string/Answer2_3" />

            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/Question3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/Answer3Hint"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/Answer3_1"
                    style="@style/Chooses"
                    android:text="@string/Answer2_1"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/Answer3_2"
                    style="@style/Chooses"
                    android:text="@string/Answer2_2"
                    android:textAppearance="?android:textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/Answer3_3"
                    style="@style/Chooses"
                    android:text="@string/Answer2_3"
                    android:textAppearance="?android:textAppearanceMedium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Questions"
                    android:text="@string/Question4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/Answer2Hint"
                    android:textSize="16sp" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/Question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/Answer4_1"
                        style="@style/Chooses"
                        android:checked="true"
                        android:text="@string/Answer2_1" />

                    <RadioButton
                        android:id="@+id/Answer4_2"
                        style="@style/Chooses"
                        android:checked="true"
                        android:text="@string/Answer2_2" />

                    <RadioButton
                        android:id="@+id/Answer4_3"
                        style="@style/Chooses"
                        android:checked="true"
                        android:text="@string/Answer2_3" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"></View>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Questions"
                android:text="@string/Question5" />

            <EditText
                android:id="@+id/Answer_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Answer1Hint"
                android:inputType="text"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"></View>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="submitAnswer"
            android:text="@string/Submit" />


    </LinearLayout>

</ScrollView>